fix text overflow

--- a/src/componets/atoms/TextPreview/TextPreview.scss
+++ b/src/componets/atoms/TextPreview/TextPreview.scss
@@ -2,4 +2,8 @@
 
 .text-preview {
   @include style.Font_Text_Preview;
+  width: 60vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
